[tool.poetry]
name = "meme"
version = "0.1.0"
description = ""
authors = ["VKalaitanov <kalaytanov93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
databases = "^0.9.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
